--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+ 
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,12 +31,12 @@
 
   <body>
     <div class="background">
-      <div>
-        <img class="image" src="avatar-jessica.jpeg" alt="image of a girl">
+      <div class="image" >
+        <img src="Pasted image.png" alt="image of a girl">
       </div>
       <div>
-        <p class="jessica">Jessica Randall</p>
-        <p class="london">London, United Kingdom</p>
+        <p class="jessica">Marie-Lois</p>
+        <p class="london">Buea, Cameroon</p>
         <br>
         <p class="front">"Front-end developer and avid reader."</p>
         <div class="table1">GitHub</div>
